--- a/style.scss
+++ b/style.scss
@@ -5,3 +5,37 @@
   font-family: "Manrope", sans-serif;
 }
 
+header {
+  overflow: hidden;
+  background-image: url("./img/Background-header.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 754px;
+  width: 1440px;
+
+  nav {
+    margin-top: 45px;
+    margin-left: 586px;
+
+    .nav__link {
+      &:link {
+        display: inline-block;
+        font-weight: 700;
+        font-size: 14px;
+        font-style: normal;
+        text-decoration: none;
+        line-height: 20px;
+        margin-right: 40px;
+      }
+      &:visited {
+        color: black;
+      }
+    }
+    .button {
+      padding: 10px 20px;
+      background-color: #F84646;
+      color: white !important;
+    }
+  }
+}
