--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
   background-size: cover;
   height: 754px;
   width: 1440px;
+  position: relative;
 }
 header nav {
   margin-top: 45px;
@@ -30,8 +31,28 @@ header nav .nav__link:link {
 header nav .nav__link:visited {
   color: black;
 }
-header nav .button {
+header nav .nav__link .button {
   padding: 10px 20px;
-  background-color: #F84646;
+  background-color: #f84646;
   color: white !important;
+}
+header .header__intro {
+  font-size: 64px;
+  font-weight: 800;
+  line-height: 82px;
+  position: absolute;
+  top: 200px;
+  left: 120px;
+  width: 665px;
+}
+header .header__description {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0.2px;
+  width: 650px;
+  height: 99px;
+  position: absolute;
+  top: 384px;
+  left: 120px;
 }/*# sourceMappingURL=style.css.map */
