add pixel perfect to input form

--- a/style.css
+++ b/style.css
@@ -97,4 +97,5 @@ header form .header__input--button {
   padding: 12px 38px;
   border-radius: 8px;
   margin-left: -142.75px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
