--- a/style.scss
+++ b/style.scss
@@ -98,6 +98,7 @@ header {
       padding: 12px 38px;
       border-radius: 8px;
       margin-left: -142.75px;
+      cursor: pointer;
     }
   }
 }
