--- a/style.scss
+++ b/style.scss
@@ -102,3 +102,29 @@ header {
     }
   }
 }
+
+article {
+  .article__introduction {
+    text-align: center;
+
+    .article__introduction--title {
+      display: inline-block;
+      font-size: 36px;
+      font-weight: 800;
+      line-height: 49px;
+      margin-top: 120px;
+      width: 428px;
+      height: 56px;
+    }
+
+    .article__introduction--description {
+      display: inline-block;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 40px;
+      margin-top: 30px;
+      width: 994px;
+      height: 110px;
+    }
+  }
+}
