--- a/style.css
+++ b/style.css
@@ -100,10 +100,10 @@ header form .header__input--button {
   cursor: pointer;
 }
 
-article .article__introduction {
+.section__1 .article__introduction {
   text-align: center;
 }
-article .article__introduction .article__introduction--title {
+.section__1 .article__introduction .article__introduction--title {
   display: inline-block;
   font-size: 36px;
   font-weight: 800;
@@ -112,7 +112,7 @@ article .article__introduction .article__introduction--title {
   width: 428px;
   height: 56px;
 }
-article .article__introduction .article__introduction--description {
+.section__1 .article__introduction .article__introduction--description {
   display: inline-block;
   font-weight: 400;
   font-size: 24px;
@@ -120,4 +120,27 @@ article .article__introduction .article__introduction--description {
   margin-top: 30px;
   width: 994px;
   height: 110px;
+}
+.section__1 .article__detail .article__detail--box {
+  text-align: center;
+  margin-top: 90px;
+}
+.section__1 .article__detail .article__detail--box img {
+  width: 76px;
+  height: 76px;
+  margin-bottom: 10px;
+}
+.section__1 .article__detail .article__detail--box .box--header {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 33px;
+}
+.section__1 .article__detail .article__detail--box .box--description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.2px;
+  display: inline-block;
+  width: 298px;
+  height: 84px;
 }/*# sourceMappingURL=style.css.map */
