fix layout in box detail

--- a/style.css
+++ b/style.css
@@ -100,20 +100,25 @@ header form .header__input--button {
   cursor: pointer;
 }
 
+.section__1 {
+  width: 1440px;
+}
 .section__1 .article__introduction {
   text-align: center;
+  width: 100%;
 }
 .section__1 .article__introduction .article__introduction--title {
-  display: inline-block;
+  width: 100%;
+  text-align: center;
   font-size: 36px;
   font-weight: 800;
   line-height: 49px;
   margin-top: 120px;
-  width: 428px;
   height: 56px;
 }
 .section__1 .article__introduction .article__introduction--description {
-  display: inline-block;
+  margin: 0px auto;
+  text-align: center;
   font-weight: 400;
   font-size: 24px;
   line-height: 40px;
@@ -121,9 +126,22 @@ header form .header__input--button {
   width: 994px;
   height: 110px;
 }
+.section__1 .article__detail {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr;
+  -moz-column-gap: 112px;
+       column-gap: 112px;
+  margin: 0px 120px;
+  width: 1200px;
+  height: 507px;
+}
 .section__1 .article__detail .article__detail--box {
   text-align: center;
   margin-top: 90px;
+  width: 320px;
+  height: 211px;
 }
 .section__1 .article__detail .article__detail--box img {
   width: 76px;
