--- a/style.css
+++ b/style.css
@@ -165,6 +165,41 @@ header form .header__input--button {
 
 .section__2 {
   width: 1440px;
-  height: 376px;
   background-color: #f84646;
+  padding: 75px 0px;
+  color: white;
+}
+.section__2 .section__2__header {
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 64px;
+  text-align: center;
+  margin-bottom: 8px;
+}
+.section__2 .section__2__description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: center;
+  margin-bottom: 60px;
+}
+.section__2 .section__2__box {
+  width: 1200px;
+  margin: 0px auto;
+  padding: 0px 63px;
+  display: flex;
+  gap: 45px;
+  align-items: center;
+}
+.section__2 .section__2__box p {
+  display: inline-block;
+  height: 62px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 31px;
+  flex-grow: 1;
+}
+.section__2 .section__2__box img {
+  width: 32px;
+  height: 32px;
 }/*# sourceMappingURL=style.css.map */
