--- a/style.scss
+++ b/style.scss
@@ -230,3 +230,39 @@ header {
     }
   }
 }
+
+.section__3 {
+  width: 1440px;
+  padding: 160px 120px;
+
+  .blog-title {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 76px;
+    color: #2e2e2e;
+  }
+
+  .blog-description {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 32px;
+    color: #808080;
+  }
+
+  button {
+    padding: 12px 58.2px;
+    background-color: #f84646;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  img {
+    border-radius: 8px;
+    width: 505.26px;
+    height: 480px;
+  }
+}
