add layout to whole section 3

--- a/style.css
+++ b/style.css
@@ -225,12 +225,15 @@ header form .header__input--button {
   font-weight: 700;
   line-height: 76px;
   color: #2e2e2e;
+  margin-bottom: 40px;
 }
 .section__3 .blog-description {
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
   color: #808080;
+  margin-bottom: 80px;
+  width: 524.31px;
 }
 .section__3 button {
   padding: 12px 58.2px;
@@ -241,9 +244,19 @@ header form .header__input--button {
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
+  width: 160.4px;
 }
 .section__3 img {
+  display: inline-block;
   border-radius: 8px;
   width: 505.26px;
   height: 480px;
+}
+.section__3 .section__3__blog1,
+.section__3 .section__3__blog2 {
+  display: flex;
+  gap: 85.21px;
+}
+.section__3 .section__3__blog1 {
+  margin-bottom: 120px;
 }/*# sourceMappingURL=style.css.map */
