--- a/style.css
+++ b/style.css
@@ -280,4 +280,19 @@ header form .header__input--button {
   line-height: 32px;
   text-align: center;
   margin-bottom: 48px;
+}
+.section__4 .logo-container {
+  width: 946px;
+  height: 336px;
+  margin: 0px auto;
+  display: flex;
+  align-items: center;
+}
+.section__4 .logo-container img {
+  display: inline-block;
+}
+.section__4 .logo-container .column {
+  display: inline-block;
+  height: 336px;
+  width: 170px;
 }/*# sourceMappingURL=style.css.map */
