--- a/style.scss
+++ b/style.scss
@@ -303,4 +303,22 @@ header {
     text-align: center;
     margin-bottom: 48px;
   }
+
+  .logo-container {
+    width: 946px;
+    height: 336px;
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+
+    img {
+      display: inline-block;
+    }
+
+    .column {
+      display: inline-block;
+      height: 336px;
+      width: 170px;
+    }
+  }
 }
