--- a/style.scss
+++ b/style.scss
@@ -383,3 +383,34 @@ header {
     border-radius: 8px;
   }
 }
+
+footer {
+  width: 1440px;
+  padding: 80px 120px;
+  padding-bottom: 70px;
+  background-color: #f8464a;
+  color: white;
+
+  .footer__col--title {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-bottom: 24px;
+  }
+
+  .footer__col--content,
+  .footer__copyright p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 24px;
+  }
+
+  .footer__copyright {
+    img {
+      width: 32px;
+      height: 32px;
+      margin-right: 24px;
+    }
+  }
+}
