--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header nav .nav__link:link {
   text-decoration: none;
   line-height: 20px;
   margin-right: 40px;
+  color: black;
 }
 header nav .nav__link:visited {
   color: black;
