--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,7 @@ header {
         text-decoration: none;
         line-height: 20px;
         margin-right: 40px;
+        color: black;
       }
       &:visited {
         color: black;
