--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ header {
   }
 }
 
-.section__1 {
+.section1 {
   width: 1440px;
   margin-bottom: 140px;
   .article__introduction {
@@ -174,13 +174,13 @@ header {
   }
 }
 
-.section__2 {
+.section2 {
   width: 1440px;
   background-color: #f84646;
   padding: 75px 0px;
   color: white;
 
-  .section__2__header {
+  .section2__header {
     font-size: 48px;
     font-weight: 800;
     line-height: 64px;
@@ -188,7 +188,7 @@ header {
     margin-bottom: 8px;
   }
 
-  .section__2__description {
+  .section2__description {
     font-size: 18px;
     font-weight: 400;
     line-height: 32px;
@@ -196,7 +196,7 @@ header {
     margin-bottom: 60px;
   }
 
-  .section__2__box {
+  .section2__box {
     width: 1200px;
     margin: 0px auto;
     padding: 0px 63px;
@@ -232,7 +232,7 @@ header {
   }
 }
 
-.section__3 {
+.section3 {
   width: 1440px;
   padding: 160px 120px;
 
@@ -272,24 +272,24 @@ header {
     height: 480px;
   }
 
-  .section__3__blog1,
-  .section__3__blog2 {
+  .section3__blog1,
+  .section3__blog2 {
     display: flex;
     gap: 85.21px;
   }
 
-  .section__3__blog1 {
+  .section3__blog1 {
     margin-bottom: 120px;
   }
 }
 
-.section__4 {
+.section4 {
   background-color: #f4f5f7;
   width: 1440px;
   padding: 60px 0px;
   color: #18191f;
 
-  .section__4__title {
+  .section4__title {
     font-size: 48px;
     font-weight: 800;
     line-height: 64px;
@@ -297,7 +297,7 @@ header {
     margin-bottom: 5px;
   }
 
-  .section__4__description {
+  .section4__description {
     font-size: 18px;
     font-weight: 500;
     line-height: 32px;
@@ -347,7 +347,7 @@ header {
   }
 }
 
-.section__5 {
+.section5 {
   width: 1440px;
   padding: 160px 0px;
   text-align: center;
@@ -359,14 +359,14 @@ header {
     margin-bottom: 10px;
   }
 
-  .section__5--title {
+  .section5--title {
     font-size: 48px;
     font-weight: 800;
     line-height: 32px;
     margin-bottom: 20px;
   }
 
-  .section__5--description {
+  .section5--description {
     font-size: 18px;
     font-weight: 500;
     line-height: 32px;
