--- a/style.css
+++ b/style.css
@@ -323,11 +323,24 @@ header form .header__input--button {
   padding: 160px 0px;
   text-align: center;
 }
-.section5 img {
+.section5 .section5--logo {
+  display: inline-block;
+  position: relative;
+}
+.section5 .section5--logo img {
   display: inline-block;
   width: 120px;
   height: 120px;
   margin-bottom: 10px;
+  z-index: 1;
+}
+.section5 .section5--logo .ellipse img {
+  width: 61px !important;
+  height: 61px !important;
+  z-index: -1;
+  position: absolute;
+  left: 55px;
+  top: 6px;
 }
 .section5 .section5--title {
   font-size: 48px;
