--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,9 @@ header {
     background-color: #f84646;
     color: white !important;
     border: none;
+    &:hover {
+      background-color: #f98282;
+    }
   }
 
   nav {
@@ -100,6 +103,9 @@ header {
       border-radius: 8px;
       margin-left: -142.75px;
       cursor: pointer;
+      &:hover {
+        background-color: #f98282;
+      }
     }
   }
 }
@@ -263,6 +269,10 @@ header {
     font-weight: 400;
     line-height: 24px;
     width: 160.4px;
+    cursor: pointer;
+    &:hover {
+      background-color: #f98282;
+    }
   }
 
   img {
@@ -400,6 +410,10 @@ header {
     line-height: 20px;
     border: none;
     border-radius: 8px;
+    cursor: pointer;
+    &:hover {
+      background-color: #f98282;
+    }
   }
 }
 
