--- a/style.css
+++ b/style.css
@@ -422,4 +422,10 @@ footer .footer {
   display: flex;
   gap: 100px;
   margin-bottom: 26px;
+}
+
+@media (max-width: 1024px) {
+  header {
+    background-image: none;
+  }
 }/*# sourceMappingURL=style.css.map */
