--- a/style.scss
+++ b/style.scss
@@ -472,6 +472,27 @@ footer {
 
 @media (max-width: 1024px) {
   header {
-    background-image: none;
+    height: 647px;
+    width: 1024px;
+    background-position-x: -68px;
+
+    nav {
+      margin-left: 250px;
+
+      .nav__link {
+        &:link {
+          margin-right: 36px;
+        }
+      }
+    }
+
+    .header__intro {
+      font-weight: 800;
+      font-size: 56px;
+      line-height: 74px;
+      top: 161px;
+      left: 60px;
+      height: 147px;
+    }
   }
 }
