--- a/style.scss
+++ b/style.scss
@@ -85,7 +85,7 @@ header {
         font-size: 16px;
         line-height: 36px;
         letter-spacing: 0.2px;
-        font-weight: 700;
+        font-weight: 400;
         opacity: 0.4;
       }
       &:focus {
@@ -493,6 +493,30 @@ footer {
       top: 161px;
       left: 60px;
       height: 147px;
+    }
+
+    .header__description {
+      font-size: 16px;
+      line-height: 28px;
+      left: 60px;
+      top: 328px;
+      width: 565px;
+    }
+
+    form {
+      top: 447px;
+      left: 60px;
+
+      .header__input {
+        padding: 18px 27px;
+        width: 422px;
+        height: 72px;
+      }
+
+      .header__input--button {
+        padding: 12px 25px;
+        margin-left: -116.75px;
+      }
     }
   }
 }
