fix latter spacing of article title

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ header form .header__input--button:hover {
   line-height: 49px;
   margin-top: 120px;
   height: 56px;
+  letter-spacing: 0.2px;
 }
 .section1 .article__introduction .article__introduction--description {
   margin: 0px auto;
@@ -463,5 +464,9 @@ footer .footer {
   header form .header__input--button {
     padding: 12px 25px;
     margin-left: -116.75px;
+  }
+  .section1 {
+    width: 1024px;
+    margin-bottom: 135px;
   }
 }/*# sourceMappingURL=style.css.map */
