--- a/style.scss
+++ b/style.scss
@@ -524,5 +524,20 @@ footer {
   .section1 {
     width: 1024px;
     margin-bottom: 135px;
+
+    .article__introduction {
+      .article__introduction--description {
+        width: 852px;
+        height: 109px;
+      }
+    }
+
+    .article__detail {
+      margin: 0px 135px;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      width: 734px;
+      column-gap: 102.68px;
+    }
   }
 }
