responsive of full section 2

--- a/style.css
+++ b/style.css
@@ -485,4 +485,15 @@ footer .footer {
     width: 1024px;
     padding: 82px 0px;
   }
+  .section2 .section2__box {
+    width: 904px;
+    padding: 0px;
+    margin: 0px auto;
+    gap: 28px;
+  }
+  .section2 .section2__box p {
+    height: 53px;
+    font-size: 14px;
+    line-height: 22px;
+  }
 }/*# sourceMappingURL=style.css.map */
