--- a/style.scss
+++ b/style.scss
@@ -558,4 +558,33 @@ footer {
       }
     }
   }
+
+  .section3 {
+    width: 1024px;
+    padding: 100px 60px;
+
+    .blog-title {
+      font-size: 58px;
+      line-height: 59.5px;
+      margin-bottom: 20px;
+    }
+
+    .blog-description {
+      font-size: 14px;
+      line-height: 28.5px;
+      margin-bottom: 46px;
+      width: 428px;
+    }
+
+    img {
+      width: 424px;
+      height: 404px;
+    }
+
+    .section3__blog1,
+    .section3__blog2 {
+      display: flex;
+      gap: 52px;
+    }
+  }
 }
