--- a/style.scss
+++ b/style.scss
@@ -283,14 +283,6 @@ header {
     height: 480px;
   }
 
-  .section3__blog2--img1440 {
-    display: inline-block;
-  }
-
-  .section3__blog2--img1024 {
-    display: none;
-  }
-
   .section3__blog1,
   .section3__blog2 {
     display: flex;
@@ -303,6 +295,10 @@ header {
 
   .section3__blog1 {
     margin-bottom: 120px;
+  }
+
+  .display1024 {
+    display: none;
   }
 }
 
@@ -603,5 +599,15 @@ footer {
       display: flex;
       gap: 52px;
     }
+
+    .display1440 {
+      display: none;
+    }
+  }
+
+  .section4 {
+    width: 1024px;
+    padding: 45px 0px;
+    padding-bottom: 73px;
   }
 }
