--- a/style.css
+++ b/style.css
@@ -538,4 +538,7 @@ footer .footer {
     padding: 45px 0px;
     padding-bottom: 73px;
   }
+  .section5 {
+    width: 1024px;
+  }
 }/*# sourceMappingURL=style.css.map */
