--- a/style.css
+++ b/style.css
@@ -541,4 +541,16 @@ footer .footer {
   .section5 {
     width: 1024px;
   }
+  footer {
+    width: 1024px;
+    padding: 80px 60px;
+    padding-right: 0px;
+    padding-bottom: 70px;
+  }
+  footer .footer {
+    gap: 50px;
+  }
+  footer .footer__copyright {
+    margin-right: 60px;
+  }
 }/*# sourceMappingURL=style.css.map */
