fix layout of footer icon box

--- a/style.scss
+++ b/style.scss
@@ -459,17 +459,17 @@ footer {
 
     div {
       display: flex;
-      gap: 24px;
+      gap: 21px;
 
       img {
-        width: 32px;
-        height: 32px;
+        width: 28px;
+        height: 28px;
         display: inline-block;
       }
 
-      .fb-icon {
-        margin-right: 4px;
-      }
+      // .fb-icon {
+      //   margin-right: 4px;
+      // }
     }
   }
 
